--- a/static/index.html
+++ b/static/index.html
@@ -71,7 +71,7 @@ let pad0 = n => n > 0 && n < 10 ? `0${n}` : `${n}`
         <main id="processes" class="mt-4"></main>
         <template id="process-template">
             <article class="border rounded p-3 mb-2">
-                <section class="row mb-2">
+                <section class="row">
                     <div class="col-9 ">
                         <div class="d-flex align-items-baseline mb-0">
                             <div data-running="true">
@@ -82,8 +82,6 @@ let pad0 = n => n > 0 && n < 10 ? `0${n}` : `${n}`
                             </div>
                             &nbsp;<span name="name"></span>
                         </div>
-                        <p class="text-muted small m-0">Last run:&nbsp;<span name="last-run"></span></p>
-                        <p class="text-muted small m-0">Last exit:&nbsp;<span name="last-exit"></span></p>
                     </div>
                     <form class="col-3 d-flex align-items-baseline justify-content-end" method="post">
                         <input type="hidden" name="process" value="">
@@ -92,11 +90,16 @@ let pad0 = n => n > 0 && n < 10 ? `0${n}` : `${n}`
                     </form>
                 </section>
                 <section class="row">
+                    <div class="col-12">
+                        <p class="text-muted small m-0">Last run:&nbsp;<span name="last-run"></span> | Last exit:&nbsp;<span name="last-exit"></span></p>
+                    </div>
+                </section>
+                <section class="row">
                     <div class="col-6">
-                        <textarea readonly disabled rows="8" cols="20" class="form-control" name="stdout"></textarea>
+                        <textarea readonly disabled rows="2" cols="20" class="form-control" name="stdout"></textarea>
                     </div>
                     <div class="col-6">
-                        <textarea readonly disabled rows="8" cols="20" class="form-control" name="stderr"></textarea>
+                        <textarea readonly disabled rows="2" cols="20" class="form-control" name="stderr"></textarea>
                     </div>
                 </section>
             </article>
