--- a/static/index.html
+++ b/static/index.html
@@ -86,6 +86,7 @@ let pad0 = n => n > 0 && n < 10 ? `0${n}` : `${n}`
                     <form class="col-3 d-flex align-items-baseline justify-content-end" method="post">
                         <input type="hidden" name="process" value="">
                         <button type="submit" formaction="/run" class="btn text-success mx-2 p-0"><i class="bi bi-play-circle"></i></button>
+                        <button type="submit" formaction="/restart" class="btn text-warning mx-2 p-0 "><i class="bi bi-arrow-repeat"></i></button>
                         <button type="submit" formaction="/kill" class="btn text-danger mx-2 p-0 "><i class="bi bi-x-circle"></i></button>
                     </form>
                 </section>
