--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,7 @@ window.addEventListener("load", () => {
         entry.querySelector("[name='stdout']").value = process.stdout;
         entry.querySelector("[name='stderr']").value = process.stderr;
         entry.querySelector("[name='process']").value = process.name;
+        entry.querySelector("[name='local-address']").innerText = process.localAddress || "";
         document.getElementById("processes").appendChild(entry);
     });
     source.addEventListener('updated_process', data => {
@@ -56,6 +57,7 @@ window.addEventListener("load", () => {
         if( !process.pid ) {
             entry.querySelector("[name='pid']").innerText = "";
         }
+        entry.querySelector("[name='local-address']").innerText = process.localAddress || "";
         entry.querySelector("[name='last-run']").innerText = process.lastRun || "";
         entry.querySelector("[name='last-exit']").innerText = process.lastExit || "";
         entry.querySelector("[name='stdout']").value = process.stdout;
@@ -70,9 +72,8 @@ let pad0 = n => n > 0 && n < 10 ? `0${n}` : `${n}`
     <body class="container">
         <main id="processes" class="mt-4"></main>
         <template id="process-template">
-            <article class="border rounded p-3 mb-2">
-                <section class="row">
-                    <div class="col-9 ">
+            <article class="border rounded p-3 mb-2 row">
+                    <div class="col-3 d-flex flex-column justify-content-start">
                         <div class="d-flex align-items-baseline mb-0">
                             <div data-running="true">
                                 <span class="badge bg-success" name="pid"></span>
@@ -81,28 +82,21 @@ let pad0 = n => n > 0 && n < 10 ? `0${n}` : `${n}`
                                 <i class="bi bi-circle text-danger"></i>
                             </div>
                             &nbsp;<span name="name"></span>
+                            <form class="d-flex align-items-baseline" method="post">
+                                <input type="hidden" name="process" value="">
+                                <button type="submit" formaction="/run" class="btn text-success mx-2 p-0"><i class="bi bi-play-circle"></i></button>
+                                <button type="submit" formaction="/restart" class="btn text-warning mx-2 p-0 "><i class="bi bi-skip-start-circle"></i></button>
+                                <button type="submit" formaction="/kill" class="btn text-danger mx-2 p-0 "><i class="bi bi-x-circle"></i></button>
+                            </form>
                         </div>
+                        <p class="text-muted small m-0">Last run:&nbsp;<code name="last-run"></code></p>
+                        <p class="text-muted small m-0">Last exit:&nbsp;<code name="last-exit"></code></p>
+                        <p class="text-muted small m-0">Local address:&nbsp;<code name="local-address"></code></p>
                     </div>
-                    <form class="col-3 d-flex align-items-baseline justify-content-end" method="post">
-                        <input type="hidden" name="process" value="">
-                        <button type="submit" formaction="/run" class="btn text-success mx-2 p-0"><i class="bi bi-play-circle"></i></button>
-                        <button type="submit" formaction="/restart" class="btn text-warning mx-2 p-0 "><i class="bi bi-arrow-repeat"></i></button>
-                        <button type="submit" formaction="/kill" class="btn text-danger mx-2 p-0 "><i class="bi bi-x-circle"></i></button>
-                    </form>
-                </section>
-                <section class="row">
-                    <div class="col-12">
-                        <p class="text-muted small m-0">Last run:&nbsp;<span name="last-run"></span> | Last exit:&nbsp;<span name="last-exit"></span></p>
-                    </div>
-                </section>
-                <section class="row">
-                    <div class="col-6">
+                    <div class="col-9 d-flex justify-content-between gap-2">
                         <textarea readonly disabled rows="2" cols="20" class="form-control" name="stdout"></textarea>
-                    </div>
-                    <div class="col-6">
                         <textarea readonly disabled rows="2" cols="20" class="form-control" name="stderr"></textarea>
                     </div>
-                </section>
             </article>
         </template>
     </body>
